force-app/main/default/objects/MC_Notification__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, notification is avaiable for use</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>