force-app/main/default/objects/MC_Notification__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject of the notiication</description>
    <inlineHelpText>Subject of the notiication</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>