force-app/main/default/objects/MC_Notification__mdt/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>This is the body template of the notification</description>
    <inlineHelpText>This is the body template of the notification</inlineHelpText>
    <label>Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>